--- a/css/main.css
+++ b/css/main.css
@@ -15,28 +15,26 @@
   max-width: 120px;
   min-width: 70px;
   height: 1000px;
+  margin-right: 20px;
   background-color: rgb(0, 148, 255);
   float: left;
   box-shadow: 0 0px 15px 0px rgba(0, 0, 0, 0.5);
-}
-.content{
-  width: 80%;
-  height: 1000px;
-  float: right;
 }
 .side-bar ul li{
   text-align: center;
   padding: 10px;
   color: #fff;
+  position: relative;
 }
-.side-bar ul li:hover{
-  background-color: rgba(255, 255, 255, 1);
+.side-bar-active{
+  background-color: rgba(0, 0, 0, 0.11);
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
   color: #000;
 }
 
-.side-bar ul li a{
+.side-bar ul li span{
   color: inherit;
+  margin: 0 3px;
   white-space: nowrap; /*强制文字不自动换行*/
 }
 
@@ -53,9 +51,62 @@
     font-family:"iconfont" !important;
     font-size: 30px;
     font-style:normal;
-    margin:0 5px;
+    margin:0 3px;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
     vertical-align: middle; /*文字与图标垂直居中*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.content{
+  width: 100%;
+  max-width: 1920px;
+  min-width: 330px;
+  height: 1000px;
+  /*float: right;*/
+}
+.content ul li{
+  float: left;
+}
+.webside{
+  display: inline-block;
+  width: 220px;
+  height: 70px;
+  margin: 20px 20px 0 0;
+  text-align: center;
+  box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.16);
+  transition: box-shadow .5s ease-in-out;
+}
+.webside:hover{
+  box-shadow: 7px 7px 17px 0px rgba(0, 0, 0, 0.3);
+}
+.webside .icon{
+  width: 70px;
+  height: 70px;
+  float: left;
+  background-color: rgb(232, 232, 232);
+}
+.webside .icon img{
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
+
+}
+.webside span{
+  color: #000;
+  line-height: 70px;
+}
+.display-none{
+  display: none;
 }
