--- a/css/main.css
+++ b/css/main.css
@@ -5,20 +5,21 @@
   list-style: none;
   font-size: 15px;
 }
-.warp{
+.wrap{
   width: 100%;
-  height: 1000px;
-  background-color: #ccc;
+  position: relative;
 }
 .side-bar{
   width: 20%;
   max-width: 120px;
   min-width: 70px;
-  height: 1000px;
-  margin-right: 20px;
+  /*height: 1000px;*/
+  padding-right: 20px;
   background-color: rgb(0, 148, 255);
   float: left;
   box-shadow: 0 0px 15px 0px rgba(0, 0, 0, 0.5);
+  overflow: auto;
+
 }
 .side-bar ul li{
   text-align: center;
@@ -70,11 +71,14 @@
 
 
 .content{
-  width: 100%;
+  /*width: 100%;*/
   max-width: 1920px;
   min-width: 330px;
-  height: 1000px;
-  /*float: right;*/
+  /*height: 500px;*/
+  overflow: auto;
+  position: absolute;
+  background-color: #fff;
+  z-index: 99;
 }
 .content ul li{
   float: left;
@@ -83,7 +87,7 @@
   display: inline-block;
   width: 220px;
   height: 70px;
-  margin: 20px 20px 0 0;
+  margin: 20px 0 0 20px;
   text-align: center;
   box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.16);
   transition: box-shadow .5s ease-in-out;
