--- a/css/main.css
+++ b/css/main.css
@@ -5,28 +5,30 @@
   list-style: none;
   font-size: 15px;
 }
+
 .wrap{
   width: 100%;
   position: relative;
 }
+
 .side-bar{
   width: 20%;
   max-width: 120px;
   min-width: 70px;
-  /*height: 1000px;*/
-  /*padding-right: 20px;*/
   background-color: rgb(0, 148, 255);
   float: left;
   box-shadow: 0 0px 15px 0px rgba(0, 0, 0, 0.5);
   overflow: auto;
 
 }
+
 .side-bar ul li{
   text-align: center;
   padding: 10px;
   color: #fff;
   position: relative;
 }
+
 .side-bar-active{
   background-color: rgba(0, 0, 0, 0.11);
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
@@ -47,6 +49,7 @@
   url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.ttf') format('truetype'),
   url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.svg#iconfont') format('svg');
 }
+
 .iconfont{
   display: inline-block;
     font-family:"iconfont" !important;
@@ -71,44 +74,48 @@
 
 
 .content{
-  /*width: 100%;*/
   max-width: 1920px;
-  min-width: 330px;
-  /*height: 500px;*/
+  min-width: 290px;
   overflow: auto;
   position: absolute;
-  background-color: #fff;
-  /*z-index: 80;*/
+  padding-left: 40px;
 }
+
 .content ul li{
   float: left;
 }
+
 .webside{
   display: inline-block;
   width: 220px;
   height: 70px;
-  margin: 20px 0 0 20px;
+  margin: 20px 40px 20px 0;
   text-align: center;
   box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.16);
   transition: box-shadow .5s ease-in-out;
 }
+
 .webside:hover{
   box-shadow: 7px 7px 17px 0px rgba(0, 0, 0, 0.3);
 }
+
 .webside .icon{
   width: 70px;
   height: 70px;
   float: left;
   background-color: rgb(232, 232, 232);
 }
+
 .webside .icon img{
   width: 100%;
   height: 100%;
 }
+
 .webside span{
   color: #000;
   line-height: 70px;
 }
+
 .display-none{
   display: none;
 }
