--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,6 @@
 }
 
 .side-bar{
-  /*width: 20%;
-  max-width: 150px;
-  min-width: 70px;*/
   background-color: rgb(0, 148, 255);
   float: left;
   box-shadow: 0 0px 15px 0px rgba(0, 0, 0, 0.5);
@@ -73,29 +70,11 @@
   position: absolute;
 }
 
-.webside-wrap{
+.webside-wrap,.search-wrap{
   margin: 0 auto;
 }
 
-.content ul li{
-  float: left;
-}
-
-/*.search-wrap{
-  width: 1040px;
-  margin: 0 auto;
-}
-.search-box{
-  width: 480px;
-  height: 50px;
-  margin: 20px;
-  text-align: center;
-  box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.16);
-  transition: box-shadow .5s ease-in-out;
-  float: left;
-}*/
-
-.webside{
+.webside,.search-box{
   display: inline-block;
   width: 220px;
   height: 70px;
@@ -103,9 +82,10 @@
   text-align: center;
   box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.16);
   transition: box-shadow .5s ease-in-out;
+  float: left;
 }
 
-.webside:hover{
+.webside:hover,.search-box:hover{
   box-shadow: 7px 7px 17px 0px rgba(0, 0, 0, 0.3);
 }
 
@@ -129,26 +109,34 @@
 .display-none{
   display: none;
 }
-@media (max-width: 590px){
+@media (max-width: 430px){
   .side-bar{
     width: 70px;
   }
   .content{
     left: 70px;
   }
-  .webside-wrap{
+  .webside-wrap,.search-wrap{
     width: 260px;
   }
+  .search-box{
+    width: 220px;
+    height: 50px;
+  }
 }
-@media (max-width: 670px) and (min-width: 591px){
+@media (max-width: 670px) and (min-width: 431px){
   .side-bar{
     width: 150px;
   }
   .content{
     left: 150px;
   }
-  .webside-wrap{
+  .webside-wrap,.search-wrap{
     width: 260px;
+  }
+  .search-box{
+    width: 220px;
+    height: 50px;
   }
 }
 @media (max-width: 930px) and (min-width: 671px){
@@ -158,8 +146,12 @@
   .content{
     left: 150px;
   }
-  .webside-wrap{
+  .webside-wrap,.search-wrap{
     width: 520px;
+  }
+  .search-box{
+    width: 480px;
+    height: 50px;
   }
 }
 @media (max-width: 1190px) and (min-width: 931px){
@@ -169,8 +161,12 @@
   .content{
     left: 150px;
   }
-  .webside-wrap{
+  .webside-wrap,.search-wrap{
     width: 780px;
+  }
+  .search-box{
+    width: 350px;
+    height: 50px;
   }
 }
 @media (min-width: 1191px){
@@ -180,7 +176,11 @@
   .content{
     left: 150px;
   }
-  .webside-wrap{
+  .webside-wrap,.search-wrap{
     width: 1040px;
+  }
+  .search-box{
+    width: 480px;
+    height: 50px;
   }
 }
