--- a/css/main.css
+++ b/css/main.css
@@ -44,11 +44,11 @@
 
 @font-face {
   font-family: 'iconfont';  /* project id 347317 */
-  src: url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.eot');
-  src: url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.eot?#iefix') format('embedded-opentype'),
-  url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.woff') format('woff'),
-  url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.ttf') format('truetype'),
-  url('https://at.alicdn.com/t/font_p2kcpi9r295p14i.svg#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/font_vl3nww3hmm18aor.eot');
+  src: url('https://at.alicdn.com/t/font_vl3nww3hmm18aor.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_vl3nww3hmm18aor.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_vl3nww3hmm18aor.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_vl3nww3hmm18aor.svg#iconfont') format('svg');
 }
 
 .iconfont{
@@ -109,6 +109,34 @@
 .display-none{
   display: none;
 }
+
+.search-text{
+  display: inline-block;
+  height: 50px;
+  border: none;
+  outline: none;
+  line-height: 50px;
+  float: left;
+  margin: 0 10px;
+
+}
+
+.search-btn{
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #ccc;
+  border: none;
+  outline: none;
+}
+
+.search-btn{
+  background: url(../images/search.png) no-repeat;
+  background-size: 50px 50px;
+}
+
+/****************************************/
+
 @media (max-width: 430px){
   .side-bar{
     width: 70px;
@@ -122,6 +150,24 @@
   .search-box{
     width: 220px;
     height: 50px;
+  }
+  .search-logo{
+    width: 50px;
+    height: 50px;
+    float: left;
+  }
+  .search-logo-g{
+    background: url(../images/Google-search-s.png) no-repeat;
+    background-size: 50px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-logo-b{
+    background: url(../images/baidu-search-s.png) no-repeat;
+    background-size: 50px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-text{
+    width: 100px;
   }
 }
 @media (max-width: 670px) and (min-width: 431px){
@@ -138,6 +184,24 @@
     width: 220px;
     height: 50px;
   }
+  .search-logo{
+    width: 50px;
+    height: 50px;
+    float: left;
+  }
+  .search-logo-g{
+    background: url(../images/Google-search-s.png) no-repeat;
+    background-size: 50px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-logo-b{
+    background: url(../images/baidu-search-s.png) no-repeat;
+    background-size: 50px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-text{
+    width: 100px;
+  }
 }
 @media (max-width: 930px) and (min-width: 671px){
   .side-bar{
@@ -153,6 +217,26 @@
     width: 480px;
     height: 50px;
   }
+  .search-logo{
+    width: 125px;
+    height: 50px;
+    float: left;
+  }
+  .search-logo-g{
+    background: url(../images/Google-search.png) no-repeat;
+    background-size: 125px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-logo-b{
+    background: url(../images/baidu-search.png) no-repeat;
+    background-size: 125px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-text{
+    width: 285px;
+  }
+
+
 }
 @media (max-width: 1190px) and (min-width: 931px){
   .side-bar{
@@ -168,6 +252,24 @@
     width: 350px;
     height: 50px;
   }
+  .search-logo{
+    width: 50px;
+    height: 50px;
+    float: left;
+  }
+  .search-logo-g{
+    background: url(../images/Google-search-s.png) no-repeat;
+    background-size: 50px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-logo-b{
+    background: url(../images/baidu-search-s.png) no-repeat;
+    background-size: 50px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-text{
+    width: 230px;
+  }
 }
 @media (min-width: 1191px){
   .side-bar{
@@ -182,5 +284,23 @@
   .search-box{
     width: 480px;
     height: 50px;
+  }
+  .search-logo{
+    width: 125px;
+    height: 50px;
+    float: left;
+  }
+  .search-logo-g{
+    background: url(../images/Google-search.png) no-repeat;
+    background-size: 125px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-logo-b{
+    background: url(../images/baidu-search.png) no-repeat;
+    background-size: 125px 50px;
+    background-color: rgb(245, 245, 245);
+  }
+  .search-text{
+    width: 285px;
   }
 }
