--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   text-decoration: none;
   list-style: none;
   font-size: 15px;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Noto Sans CJK SC, WenQuanYi Micro Hei, Arial, sans-serif;
 }
 
 /****************************************/
